--- a/src/app/pages/auth/register/register.page.scss
+++ b/src/app/pages/auth/register/register.page.scss
@@ -127,7 +127,7 @@
     color: #788692;
     opacity: 1;
     white-space: pre-line;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
   }
 
   .bsname {
@@ -165,6 +165,7 @@
     font: normal normal 100 16px/21px SF Pro Display;
     letter-spacing: 0.22px;
     color:#000000;
+    font-weight: 200;
   
   }
 
@@ -289,7 +290,7 @@ ion-modal {
 }
 
 ion-popover {
-  --max-width: 183px;
+  --max-width: 170px;
 
 
   ion-text {
