--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -276,6 +276,7 @@ a {
     box-shadow: 2px 2px 7px #0b113157;
     border-radius: 20px;
     padding-left: 1rem;
+    margin-top: 5px;
 }
 
 .top-result-container {
