--- a/src/app/pages/post/add-post/add-post.page.html
+++ b/src/app/pages/post/add-post/add-post.page.html
@@ -52,7 +52,7 @@
           </video> -->
 
           <ion-img style="width: 100%;" *ngIf="photo.length > 0" id="{{post.Id}}-img" 
-            [src]="photo">
+            [src]="photo[0]">
           </ion-img>
 
         </ion-card>
@@ -150,7 +150,8 @@
       [postLimit]="post.PostImages.length"
       [mediaFiles]="post.PostImages"
       (filePathEvent)="addMedia($event)"
-      (imagePath)="imagePathMedia($event)">
+      (imagePath)="imagePathMedia($event)"
+      (fileToUpload)="fileToUploadToServer($event)">
     </app-multiple-media-upload>
 
     <!-- <div class="error-message" *ngIf="saveClicked && post.PostImages.length==0 && post.PostDescription==''">
@@ -172,6 +173,7 @@
 
   <ion-button shape="round" expand="block"
   color="primary" 
+  [disabled]="photo.length === 0"
   (click)="addPost()">
   Create post
 </ion-button>
