updated multiple image request

--- a/src/app/pages/post/add-post/add-post.page.html
+++ b/src/app/pages/post/add-post/add-post.page.html
@@ -41,8 +41,8 @@
 
   <!-- image and video-->
   <div class="ion-text-center  post-screen-slide">
-    <ion-slides>
-      <ion-slide>
+    <ion-slides [pager]="photo.length > 1 ? true : false" [options]="slideOptions">
+      <ion-slide *ngFor="let photo of photo">
         <ion-card class="media">
           <ion-icon *ngIf="photo.length <= 0" src="assets/icons/screen-wise-icons/Canvas screens icons as svg/Creat post + icon.svg"></ion-icon>
 
@@ -52,11 +52,14 @@
           </video> -->
 
           <ion-img style="width: 100%;" *ngIf="photo.length > 0" id="{{post.Id}}-img" 
-            [src]="photo[0]">
+            [src]="photo">
           </ion-img>
 
         </ion-card>
       </ion-slide>
+      <ion-card *ngIf="photo.length <= 0" class="media">
+        <ion-icon src="assets/icons/screen-wise-icons/Canvas screens icons as svg/Creat post + icon.svg"></ion-icon>
+      </ion-card>
     </ion-slides>
   </div>
 
