updated video uplaod

--- a/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.html
+++ b/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.html
@@ -106,7 +106,7 @@
       </ion-buttons>
     </ion-card>
   </ion-col>
-  <ion-col size="4">
+  <!-- <ion-col size="4">
     <ion-card *ngIf="traitPost < 1 && postLimit <= 5">
       <ion-buttons>
         <ion-button [disabled]="isUploadDisabled || isDisabled || (postLimit == 5)" shape="round"
@@ -115,5 +115,5 @@
         </ion-button>
       </ion-buttons>
     </ion-card>
-  </ion-col>
+  </ion-col> -->
 </ion-row>
