--- a/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.html
+++ b/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.html
@@ -49,6 +49,18 @@
         </ion-button>
       </ion-buttons>
     </ion-item> -->
+
+    <div class="ion-text-center  post-screen-slide ">
+      <ion-slides *ngIf="fileToUpload.length > 0" class="post-screen-slide">
+        <ion-slide  *ngFor="let photo of fileToUpload" style="display: block; height: auto;">
+          <ion-img style="width: 100%;" id="{{post.Id}}-img" [src]="photo.thumbFilePath"></ion-img>
+        </ion-slide>
+      </ion-slides>
+      <ion-card *ngIf="fileToUpload.length <= 0" class="media">
+        <ion-icon src="assets/icons/screen-wise-icons/Canvas screens icons as svg/Creat post + icon.svg"></ion-icon>
+      </ion-card>
+    </div>
+
     <ion-popover trigger="viewable-by" side="bottom" alignment="end" [dismissOnSelect]="true" triggerAction="click">
       <ng-template>
         <ion-list>
@@ -70,6 +82,7 @@
       [videoRecDisable]="11"
       [photoLibrary]="11"
       (filePathEvent)="addMedia($event)"
+      (fileToUpload)="fileToUploadToServer($event)"
       [traitPost]="post.PostImages.length">
     </app-multiple-media-upload>
 
