--- a/src/app/pages/post/add-post/add-post.page.scss
+++ b/src/app/pages/post/add-post/add-post.page.scss
@@ -50,6 +50,10 @@ ion-item {
   margin-top: -6px;
   // background-color: #28507;
   background: #f0f5f7;
+  padding-top: 0px !important;
+    padding-bottom: 0px !important;
+
+
 }
 
 ion-title {
