--- a/src/app/core/components/post/post-items/post-items.component.scss
+++ b/src/app/core/components/post/post-items/post-items.component.scss
@@ -62,8 +62,8 @@ ion-title {
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height:100px;
-    max-height: 460px;
+    min-height:550px;
+    max-height: 1400px;
     box-shadow: none;
     overflow: visible;
 
@@ -77,8 +77,9 @@ ion-title {
 
 .video{
 
-  height: 324px;
-  width: 376px;
+  height: 100%;
+  // width: 376px;
+  width: 100%;
 }
 
 .profileBg{
