--- a/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.scss
+++ b/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.scss
@@ -62,21 +62,21 @@ ion-row {
   }
 }
 
-@media screen and (max-width: 1024px) {
+// @media screen and (max-width: 1024px) {
 
-  /* Insert your mobile-specific styles here */
-  ion-card {
-    height: 192px !important;
-  }
-}
+//   /* Insert your mobile-specific styles here */
+//   ion-card {
+//     height: 192px !important;
+//   }
+// }
 
-@media screen and (max-width: 652px) {
+// @media screen and (max-width: 652px) {
 
-  /* Insert your mobile-specific styles here */
-  ion-card {
-    height: 96px !important;
-  }
-}
+//   /* Insert your mobile-specific styles here */
+//   ion-card {
+//     height: 96px !important;
+//   }
+// }
 
 
 ion-textarea.custom-textarea {
@@ -299,6 +299,16 @@ ion-popover {
 
 }
 
+.post-screen {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  box-shadow: none;
+  overflow: visible;
+  height: 350px;
+}
 
 .post-screen-slide {
   & ion-card {
@@ -307,7 +317,7 @@ ion-popover {
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height:100px;
+    min-height: 100px;
     max-height: 350px;
     box-shadow: none;
     overflow: visible;
@@ -317,8 +327,9 @@ ion-popover {
 .media{
   background-color: #F0F5F7;
   width: 100%;
-  height: 350px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0px;
+  height: 350px;
 }
