--- a/src/app/pages/post/add-post/add-post.page.html
+++ b/src/app/pages/post/add-post/add-post.page.html
@@ -72,7 +72,7 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
 
   <!-- image and video-->
   <div class="ion-text-center  post-screen-slide " style="margin-top: 10px;">
-    <ion-slides *ngIf="fileToUpload.length > 0" [pager]="true" class="post-screen-slide">
+    <ion-slides *ngIf="fileToUpload.length > 0" [pager]="true" class="post-screen-slide" [style.height]="slideHeight">
       <ion-slide  *ngFor="let photo of fileToUpload" style="display: block; height: auto;">
         <ion-card >
 
@@ -88,7 +88,7 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
         </ion-card>
       </ion-slide>
     </ion-slides>
-    <ion-card *ngIf="fileToUpload.length <= 0" class="media">
+    <ion-card *ngIf="fileToUpload.length <= 0" class="media" [style.height]="slideHeight">
       <ion-icon src="assets/icons/screen-wise-icons/Canvas screens icons as svg/Creat post + icon.svg"></ion-icon>
     </ion-card>
   </div>
