--- a/src/app/core/components/post/post-items/post-items.component.scss
+++ b/src/app/core/components/post/post-items/post-items.component.scss
@@ -62,8 +62,8 @@ ion-title {
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height:550px;
-    max-height: 1400px;
+    // min-height:550px;
+    // max-height: 1400px;
     box-shadow: none;
     overflow: visible;
 
