--- a/src/app/pages/post/add-post/add-post.page.scss
+++ b/src/app/pages/post/add-post/add-post.page.scss
@@ -18,8 +18,8 @@ ion-textarea.custom-textarea {
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height: 550px;
-    max-height: 1400px;
+    // min-height: 550px;
+    // max-height: 1400px;
     box-shadow: none;
     overflow: visible;
 
@@ -34,8 +34,8 @@ ion-textarea.custom-textarea {
 .media{
   background-color: #F0F5F7;
   width: 100%;
-  min-height: 550px;
-  max-height: 1400px;
+  // min-height: 550px;
+  // max-height: 1400px;
   display: flex;
   justify-content: center;
   align-items: center;
